# ei-pico-visual-wake-words

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
source/: main.cpp
source/arducam/: arducam.c  hm01b0_init.h
source/edge-impulse/: README.txt
source/edge-impulse/model-parameters/: dsp_blocks.h  model_metadata.h  model_variables.h
source/edge-impulse/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
source/lcd/: DEV_Config.h  fonts.c  fonts.h  st7735.c  st7735.h
test/cam-lcd-resize/: CMakeLists.txt
test/cam-lcd-resize/source/: main.cpp
test/cam-lcd-resize/source/arducam/: arducam.h  hm01b0_init.h
test/cam-lcd-resize/source/edge-impulse/: CMakeLists.txt
test/cam-lcd-resize/source/lcd/: DEV_Config.c  DEV_Config.h  fonts.h
test/cam-lcd-test/: CMakeLists.txt  README.md  main.c
test/cam-lcd-test/source/: main.c
test/cam-lcd-test/source/arducam/: arducam.h  hm01b0_init.h
test/cam-lcd-test/source/lcd/: DEV_Config.h  fonts.h
test/delete-me/: CMakeLists.txt  main.c
test/delete-me/lib/arducam/: CMakeLists.txt  arducam.c
test/inference-01/: CMakeLists.txt
test/inference-01/source/: main.cpp
